[package]
name = "dst"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
indexmap = "2"
libc = { version = "0.2", optional = true }
rand = "0.9"
scoped-tls = "1"
rand_chacha = "0.9"
sha2 = "0.10"
spin = { version = "0.9", optional = true }
tokio = { version = "1.49", features = ["macros", "rt", "sync", "time", "test-util"] }

[dev-dependencies]
getrandom = "0.2"
libc = "0.2"
tokio = { version = "1.49", features = ["full"] }
test-log = "0.2"
tracing-subscriber = "0.3"

[features]
default = ["os-hooks"]
# Umbrella: enables both interposers. Kept for backwards compat — existing
# consumers (e.g. enterprise's simulator harness) keep working unchanged.
os-hooks = ["os-rng-hooks", "os-clock-hooks"]
# Seeded `getrandom`/`getentropy` interposition only. Safe to enable in a
# binary that runs a co-tenant tokio runtime.
os-rng-hooks = ["dep:libc", "dep:spin"]
# `clock_gettime` interposition. Process-wide; do NOT enable in a binary
# running a co-tenant tokio runtime — see doc/OS_HOOKS.md.
os-clock-hooks = ["dep:libc"]
# Seed each per-node Tokio runtime's internal RNG (the one `tokio::select!`
# uses to randomize branch polling) from the sim seed, via Tokio's
# `Builder::rng_seed`. Double-gated: also requires building with
# `--cfg tokio_unstable` (the API is unstable). A silent no-op otherwise.
# This is the ONLY mechanism that makes SUT `select!` ordering deterministic;
# the getrandom hook cannot (see doc/OS_HOOKS.md). No effect on dst's own
# engine, which contains no `select!`.
tokio-rng-seed = []

# `tokio_unstable` is an external cfg (set via RUSTFLAGS by consumers who opt
# into Tokio's unstable APIs); declare it so the `tokio-rng-seed` gate doesn't
# trip the `unexpected_cfgs` lint.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[[test]]
name = "os_hooks_integration"
path = "tests/os_hooks_integration.rs"
required-features = ["os-hooks"]

